--- a/index.html
+++ b/index.html
@@ -1,3 +1,52 @@
-<p>Hello 大家好</p>
-<p>我是yumas，这是我的个人网站。 </p>
-<p>很高兴你来到这里</p>
+<!DOCTYPE html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>您的网页标题</title>
+    <style>
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 40px;
+            background-color: #f4f4f4;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            border-radius: 5px;
+            text-decoration: none;
+            margin-top: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <!-- 图片和文本 -->
+        <img src="图片地址1" alt="描述">
+        <p>文本描述1</p>
+
+        <img src="图片地址2" alt="描述">
+        <p>文本描述2</p>
+
+        <!-- 按钮 -->
+        <a href="链接地址" class="btn">BOOTH DL</a>
+    </div>
+</body>
+</html>
