--- a/index.html
+++ b/index.html
@@ -1,108 +1,409 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>您的网站标题</title>
-    <style>
-        /* 基础样式 */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            display: flex;
-        }
-        .header {
-            background-color: #434858;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-            width: 100%;
-        }
-        .sidebar {
-            background-color: #434858;
-            width: 125px;  /* 减少了导航栏的宽度 */
-            height: 100vh;
-            padding: 20px;
-            position: fixed;  /* 锚定导航栏 */
-        }
-        .sidebar a {
-            color: #fff;
-            text-decoration: none;
-            display: block;
-            margin-bottom: 10px;
-        }
-        .sidebar a:hover {
-            text-decoration: underline;
-        }
-        .gallery {
-            flex: 1;
-            padding: 20px;
-            margin-left: 145px;  /* 为了避免内容被侧边栏遮挡 */
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-        }
-        .gallery-item {
-            width: 300px;
-            position: relative;
-        }
-        .gallery-item img {
-            width: 100%;
-            height: auto;
-            object-fit: cover;
-        }
-        .download-btn {
-            position: absolute;
-            bottom: 10px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: #333;
-            color: #fff;
-            padding: 10px 20px;
-            text-align: center;
-            border-radius: 5px;
-            text-decoration: none;
-        }
-    </style>
-</head>
-<body>
+<!DOCTYPE HTML>
 
-    <!-- 顶部标题栏 -->
-    <div class="header">
-        您的网站标题
-    </div>
+<html>
+	<head>
+		<link rel="icon" href="images/favicon.PNG" type="image/png">
+		<title>平子コマ</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="" />
+		<meta name="keywords" content="" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body class="is-preload">
 
-    <div class="container">
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-        <!-- 左侧导航栏 -->
-        <div class="sidebar">
-            <a href="#">主页</a>
-            <a href="#">页面1</a>
-            <a href="#">页面2</a>
-            <!-- 添加其他链接 -->
-        </div>
+				<!-- Intro -->
+					<section class="intro">
+						<header>
+							<h1>平子コマ</h1>
+							<p style="margin-bottom: 40px;">UTAU日本語連続音音源</p>
+							<a href="download/Hirako Koma VCVJPN.zip" class="button">Voicebank Download</a>
+							<p style="margin-bottom: 100px;">
 
-        <!-- 图片画廊区域 -->
-        <div class="gallery">
-            <div class="gallery-item">
-                <img src="您的图片链接1" alt="图片1">
-                <a href="#" class="download-btn">BOOTH DL</a>
-            </div>
 
-            <div class="gallery-item">
-                <img src="您的图片链接2" alt="图片2">
-                <a href="#" class="download-btn">BOOTH DL</a>
-            </div>
+							</p>
+							<ul class="actions">
+								<li><a href="#first" class="arrow scrolly"><span class="label">Next</span></a></li>
+							</ul>
+						</header>
+						<div class="content">
+							<span class="image main"><img src="images/Hirako Koma.PNG" alt="" /></span>
+						</div>
+					</section>
 
-            <!-- 您可以根据需要添加更多的 .gallery-item 区域 -->
-        </div>
+				<!-- Section -->
+					<section id="first">
+						<header>
+							<h2 class="bigbold">プロフィール</h2>
+						</header>
+						<div class="content">
+							<div class="gallery">
+								<a href="images/hirako_head.PNG" class="landscape"><img src="images/Koma_Q.PNG" alt="" /></a>
+							</div>
+							<p style="margin-bottom: 100px;"></p>
+							<p> 人物紹介:  彼の名前は<strong>平子コマ</strong>で、元気な少年のように見えますが、実際にはどこかぼんやりしています。髪はいつも寝ぐせで乱れており、鼻には通常、絆創膏が貼られています。それは歩きながらうっかりして電柱にぶつかるからです。</p>
+							<p> 基本情報 :</p>
+							<p> &nbsp;&nbsp;&nbsp;性別&nbsp;&nbsp;&nbsp;&nbsp;男</p>
+							<p> &nbsp;&nbsp;&nbsp;身長&nbsp;&nbsp;&nbsp;&nbsp;168 cm</p>
+							<p> &nbsp;&nbsp;&nbsp;年齢&nbsp;&nbsp;&nbsp;&nbsp;15歳</p>
+							<p>	中の人&立ち絵：羽麋<p>
+								<p>	音声特性： 得意な音域はE2-C4で、低い音域の楽曲に適しています。</p>
+								<p>	代表色：#e92d3e</p>
+						</div>
+					</section>
 
-    </div>
+				<!-- Section -->
+					<section>
+						<header>
+							<h2 class="bigbold">ダウンロード</h2>
+						</header>
+						<div class="content">
+							<p><strong>こちらをクリックして「平子コマ」のVCV連続音音源をダウンロードしてください。</strong></p>
+							<ul class="actions">
+								<li><a href="download/Hirako Koma VCVJPN.zip" class="button primary large">voicebank Download</a></li>
+							</ul>
+							<p>以下はこの音源の試聴クリップです。</p>
+							<audio controls>
+								<source src="audio/sample.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+							</audio>
 
-</body>
+							<p style="margin-bottom: 120px;"></p>
+							<p><strong>こちらをクリックして「平子コマ」のキャラクター立ち絵をダウンロードしてください。</strong></p>
+							<ul class="actions">
+								<li><a href="download/Illustration.zip" class="button large">illustration Download</a></li>
+							</ul>
+						</div>
+					</section>
+
+				<!-- Section -->
+					<section>
+						<header>
+							<h2 class="bigbold">使用規約</h2>
+						</header>
+						<div class="content">
+							<p>この音源をダウンロードして使用する前に、使用規約をお読みください。この音源を使用することは、該当の規約に同意したことを意味します。規約に違反する行為は歓迎されませんので、それを行わないでください。</p>
+							<a href="https://utauchn.huijiwiki.com/wiki/%E5%85%AC%E5%85%B1%E8%A7%84%E7%BA%A6">規約を読む</a>
+							<p>この音源の使用規約は「UTAU中華組wiki公共使用規約」です。</p>
+						</div>
+					</section>
+
+				<!-- Elements -->
+				<!--
+					<section>
+						<header>
+							<h2>Elements</h2>
+						</header>
+						<div class="content">
+
+							<section>
+								<header>
+									<h3>Text</h3>
+								</header>
+								<div class="content">
+									<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
+									This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
+									This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>. Finally, <a href="#">this is a link</a>.</p>
+									<hr />
+									<h2>Heading Level 2</h2>
+									<h3>Heading Level 3</h3>
+									<h4>Heading Level 4</h4>
+									<h5>Heading Level 5</h5>
+									<hr />
+									<h5>Blockquote</h5>
+									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+									<h5>Preformatted</h5>
+									<pre><code>i = 0;
+
+while (!deck.isInOrder()) {
+  print 'Iteration ' + i;
+  deck.shuffle();
+  i++;
+}
+
+print 'Sorted in ' + i + ' iterations.';</code></pre>
+								</div>
+							</section>
+
+							<section>
+								<header>
+									<h3>Lists</h3>
+								</header>
+								<div class="content">
+
+									<h4>Unordered</h4>
+									<ul>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Sagittis adipiscing.</li>
+										<li>Felis enim feugiat.</li>
+									</ul>
+
+									<h4>Alternate</h4>
+									<ul class="alt">
+										<li>Dolor pulvinar etiam.</li>
+										<li>Sagittis adipiscing.</li>
+										<li>Felis enim feugiat.</li>
+									</ul>
+
+									<h4>Ordered</h4>
+									<ol>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Etiam vel felis viverra.</li>
+										<li>Felis enim feugiat.</li>
+										<li>Dolor pulvinar etiam.</li>
+										<li>Etiam vel felis lorem.</li>
+										<li>Felis enim et feugiat.</li>
+									</ol>
+									<h4>Icons</h4>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+									</ul>
+
+									<h4>Actions</h4>
+									<ul class="actions">
+										<li><a href="#" class="button primary">Default</a></li>
+										<li><a href="#" class="button">Default</a></li>
+									</ul>
+									<ul class="actions stacked">
+										<li><a href="#" class="button primary">Default</a></li>
+										<li><a href="#" class="button">Default</a></li>
+									</ul>
+								</div>
+							</section>
+
+							<section>
+								<header>
+									<h3>Table</h3>
+								</header>
+								<div class="content">
+									<h4>Default</h4>
+									<div class="table-wrapper">
+										<table>
+											<thead>
+												<tr>
+													<th>Name</th>
+													<th>Description</th>
+													<th>Price</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Item One</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Two</td>
+													<td>Vis ac commodo adipiscing arcu aliquet.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Three</td>
+													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Four</td>
+													<td>Vitae integer tempus condimentum.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Five</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+											</tbody>
+											<tfoot>
+												<tr>
+													<td colspan="2"></td>
+													<td>100.00</td>
+												</tr>
+											</tfoot>
+										</table>
+									</div>
+
+									<h4>Alternate</h4>
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Name</th>
+													<th>Description</th>
+													<th>Price</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Item One</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Two</td>
+													<td>Vis ac commodo adipiscing arcu aliquet.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Three</td>
+													<td> Morbi faucibus arcu accumsan lorem.</td>
+													<td>29.99</td>
+												</tr>
+												<tr>
+													<td>Item Four</td>
+													<td>Vitae integer tempus condimentum.</td>
+													<td>19.99</td>
+												</tr>
+												<tr>
+													<td>Item Five</td>
+													<td>Ante turpis integer aliquet porttitor.</td>
+													<td>29.99</td>
+												</tr>
+											</tbody>
+											<tfoot>
+												<tr>
+													<td colspan="2"></td>
+													<td>100.00</td>
+												</tr>
+											</tfoot>
+										</table>
+									</div>
+								</div>
+							</section>
+
+							<section>
+								<header>
+									<h3>Buttons</h3>
+								</header>
+								<div class="content">
+									<ul class="actions">
+										<li><a href="#" class="button primary">Primary</a></li>
+										<li><a href="#" class="button">Default</a></li>
+									</ul>
+									<ul class="actions">
+										<li><a href="#" class="button large">Large</a></li>
+										<li><a href="#" class="button">Default</a></li>
+										<li><a href="#" class="button small">Small</a></li>
+									</ul>
+									<ul class="actions">
+										<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
+										<li><a href="#" class="button icon solid fa-download">Icon</a></li>
+									</ul>
+									<ul class="actions">
+										<li><span class="button primary disabled">Disabled</span></li>
+										<li><span class="button disabled">Disabled</span></li>
+									</ul>
+								</div>
+							</section>
+
+							<section>
+								<header>
+									<h3>Form</h3>
+								</header>
+								<div class="content">
+									<form method="post" action="#">
+										<div class="fields">
+											<div class="field half">
+												<label for="demo-name">Name</label>
+												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
+											</div>
+											<div class="field half">
+												<label for="demo-email">Email</label>
+												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
+											</div>
+											<div class="field">
+												<label for="demo-category">Category</label>
+												<select name="demo-category" id="demo-category">
+													<option value="">-</option>
+													<option value="1">Manufacturing</option>
+													<option value="1">Shipping</option>
+													<option value="1">Administration</option>
+													<option value="1">Human Resources</option>
+												</select>
+											</div>
+											<div class="field half">
+												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
+												<label for="demo-priority-low">Low</label>
+											</div>
+											<div class="field half">
+												<input type="radio" id="demo-priority-high" name="demo-priority">
+												<label for="demo-priority-high">High</label>
+											</div>
+											<div class="field half">
+												<input type="checkbox" id="demo-copy" name="demo-copy">
+												<label for="demo-copy">Email me a copy</label>
+											</div>
+											<div class="field half">
+												<input type="checkbox" id="demo-human" name="demo-human" checked>
+												<label for="demo-human">Not a robot</label>
+											</div>
+											<div class="field">
+												<label for="demo-message">Message</label>
+												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" class="primary" /></li>
+											<li><input type="reset" value="Reset" /></li>
+										</ul>
+									</form>
+								</div>
+							</section>
+
+						</div>
+					</section>
+				-->
+
+				<!-- Section -->
+					<section>
+						<header>
+							<h2 class="bigbold">作者の連絡先</h2>
+						</header>
+						<div class="content">
+							<p>この音源「平子コマ」の管理者も羽麋[Yumashanko]です。何か助けが必要な場合やこの音源についての疑問があれば、以下の方法でお問い合わせいただけます。</p>
+						</div>
+						<footer>
+							<ul class="items">
+								<li>
+									<h3>Email Adress</h3>
+									<a href="https://mail.google.com">yumashanko@gmail.com</a>
+								</li>
+								<li>
+									<h3>Follow me on Bilibili</h3>
+									<a href="https://space.bilibili.com/515205811">羽麋</a>
+								</li>
+								<!-- <li>
+									<h3>Elsewhere</h3>
+									<ul class="icons">
+										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands fa-codepen"><span class="label">Codepen</span></a></li>
+									</ul>
+								</li> -->
+							</ul>
+						</footer>
+					</section>
+
+				<!-- Copyright -->
+					<div class="copyright">羽麋. All rights reserved.</div>
+
+			</div>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
