--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<header>
 							<h1>平子コマ</h1>
 							<p style="margin-bottom: 40px;">UTAU日本語連続音音源</p>
-							<a href="download/Hirako Koma VCVJPN.zip" class="button">Voicebank Download</a>
+							<a href="https://drive.google.com/file/d/1bI7G9XfInCjfJE_KEKZgxZyilshfgnG1/view?usp=share_link" class="button">Voicebank Download</a>
 							<p style="margin-bottom: 100px;">
 
 
@@ -63,7 +63,7 @@
 						<div class="content">
 							<p><strong>こちらをクリックして「平子コマ」のVCV連続音音源をダウンロードしてください。</strong></p>
 							<ul class="actions">
-								<li><a href="download/Hirako Koma VCVJPN.zip" class="button primary large">voicebank Download</a></li>
+								<li><a href="https://drive.google.com/file/d/1bI7G9XfInCjfJE_KEKZgxZyilshfgnG1/view?usp=share_link" class="button primary large">voicebank Download</a></li>
 							</ul>
 							<p>以下はこの音源の試聴クリップです。</p>
 							<audio controls>
