--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 							<p>	中の人&立ち絵：羽麋<p>
 								<p>	音声特性： 得意な音域はE2-C4で、低い音域の楽曲に適しています。</p>
 								<p>	代表色：#e92d3e</p>
+								<p>	連続音音源形式：VCV</p>
+								<p>	収録音階：A2、F3</p>
 						</div>
 					</section>
 
@@ -70,7 +72,10 @@
 								<source src="audio/sample.mp3" type="audio/mpeg">
 								Your browser does not support the audio element.
 							</audio>
-
+							<audio controls>
+								<source src="audio/aimaisakahi_full1.mp3" type="audio/mpeg">
+								Your browser does not support the audio element.
+							</audio>
 							<p style="margin-bottom: 120px;"></p>
 							<p><strong>こちらをクリックして「平子コマ」のキャラクター立ち絵をダウンロードしてください。</strong></p>
 							<ul class="actions">
