--- a/english.html
+++ b/english.html
@@ -17,11 +17,12 @@
 
 				<!-- Intro -->
 					<section class="intro">
-				<a href="english.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Switch to English</a>
+				<a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日本語</a>
 
 						<header>
 							<h1>平子コマ</h1>
-							<p style="margin-bottom: 40px;">UTAU日本語連続音音源</p>
+							<p class="bigbold">Hirako Koma</p>
+							<p style="margin-bottom: 40px;">UTAU Japanese Voicebank</p>
 							<a href="https://drive.google.com/file/d/1bI7G9XfInCjfJE_KEKZgxZyilshfgnG1/view?usp=share_link" class="button">Voicebank Download</a>
 							<p style="margin-bottom: 100px;">
 
@@ -39,37 +40,37 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2 class="bigbold">プロフィール</h2>
+							<h2 class="bigbold">Profile</h2>
 						</header>
 						<div class="content">
 							<div class="gallery">
 								<a href="images/hirako_head.PNG" class="landscape"><img src="images/Koma_Q.PNG" alt="" /></a>
 							</div>
 							<p style="margin-bottom: 100px;"></p>
-							<p> 人物紹介:  彼の名前は<strong>平子コマ</strong>で、元気な少年のように見えますが、実際にはどこかぼんやりしています。髪はいつも寝ぐせで乱れており、鼻には通常、絆創膏が貼られています。それは歩きながらうっかりして電柱にぶつかるからです。</p>
-							<p> 基本情報 :</p>
-							<p> &nbsp;&nbsp;&nbsp;性別&nbsp;&nbsp;&nbsp;&nbsp;男</p>
-							<p> &nbsp;&nbsp;&nbsp;身長&nbsp;&nbsp;&nbsp;&nbsp;168 cm</p>
-							<p> &nbsp;&nbsp;&nbsp;年齢&nbsp;&nbsp;&nbsp;&nbsp;15歳</p>
-							<p>	中の人&立ち絵：羽麋<p>
-								<p>	音声特性： 得意な音域はE2-C4で、低い音域の楽曲に適しています。</p>
-								<p>	代表色：#e92d3e</p>
-								<p>	連続音音源形式：VCV</p>
-								<p>	収録音階：A2、F3</p>
+							<p>Character Introduction: His name is <strong>Hirako Koma</strong>. Though he appears to be an energetic young boy, he is actually somewhat absent-minded. His hair is always messy due to bed head, and there is usually a band-aid on his nose. This is because he tends to accidentally bump into utility poles while walking.</p>
+							<p>Basic Information:</p>
+							<p>  &nbsp;&nbsp;&nbsp;Gender&nbsp;&nbsp;&nbsp;&nbsp;Male</p>
+							<p>  &nbsp;&nbsp;&nbsp;Height&nbsp;&nbsp;&nbsp;&nbsp;168 cm</p>
+							<p>  &nbsp;&nbsp;&nbsp;Age&nbsp;&nbsp;&nbsp;&nbsp;15 years old</p>
+							<p>  Illustrator & Voice: Yumashanko[羽麋]</p>
+							<p>  Vocal Characteristics: His proficient vocal range is E2-C4, making him well-suited for songs with lower ranges.</p>
+							<p>  Representative Color: #e92d3e</p>
+							<p>  Voice Bank Type: VCV</p>
+							<p>  Recorded Pitches: A2, F3</p>							
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2 class="bigbold">ダウンロード</h2>
+							<h2 class="bigbold">Downloads</h2>
 						</header>
 						<div class="content">
-							<p><strong>こちらをクリックして「平子コマ」のVCV連続音音源をダウンロードしてください。</strong></p>
+							<p><strong>You can download the VCV Japanese Voicebank of Hirako Koma here.</strong></p>
 							<ul class="actions">
 								<li><a href="https://drive.google.com/file/d/1bI7G9XfInCjfJE_KEKZgxZyilshfgnG1/view?usp=share_link" class="button primary large">voicebank Download</a></li>
 							</ul>
-							<p>以下はこの音源の試聴クリップです。</p>
+							<p>You can listen to the voice here.</p>
 							<audio controls>
 								<source src="audio/sample.mp3" type="audio/mpeg">
 								Your browser does not support the audio element.
@@ -79,7 +80,7 @@
 								Your browser does not support the audio element.
 							</audio>
 							<p style="margin-bottom: 120px;"></p>
-							<p><strong>こちらをクリックして「平子コマ」のキャラクター立ち絵をダウンロードしてください。</strong></p>
+							<p><strong>You can download the charecter illustration of Hirako Koma here.</strong></p>
 							<ul class="actions">
 								<li><a href="download/Illustration.zip" class="button large">illustration Download</a></li>
 							</ul>
@@ -89,13 +90,14 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2 class="bigbold">使用規約</h2>
+							<h2 class="bigbold">Terms of Use</h2>
 						</header>
 						<div class="content">
-							<p>この音源をダウンロードして使用する前に、使用規約をお読みください。この音源を使用することは、該当の規約に同意したことを意味します。規約に違反する行為は歓迎されませんので、それを行わないでください。</p>
-							<a href="https://utauchn.huijiwiki.com/wiki/%E5%85%AC%E5%85%B1%E8%A7%84%E7%BA%A6">規約を読む</a>
-							<p>この音源の使用規約は「UTAU中華組wiki公共使用規約」です。</p>
+						<p>Please read the terms of use before downloading and using this voice bank. Using this voice bank implies that you agree to the relevant terms. Violation of the terms is not welcome, so please refrain from doing so.</p>
+						<a href="https://utauchn.huijiwiki.com/wiki/%E5%85%AC%E5%85%B1%E8%A7%84%E7%BA%A6"><strong>READ THE TERMS</strong></a>
+						<p>The terms of use for this voice bank are governed by the "UTAU Chinese Community Wiki Public Usage Terms."</p>
 						</div>
+
 					</section>
 
 				<!-- Elements -->
@@ -369,20 +371,24 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				<!-- Section -->
 					<section>
 						<header>
-							<h2 class="bigbold">作者の連絡先</h2>
+							<h2 class="bigbold">Contact the Author</h2>
 						</header>
 						<div class="content">
-							<p>この音源「平子コマ」の管理者も羽麋[Yumashanko]です。何か助けが必要な場合やこの音源についての疑問があれば、以下の方法でお問い合わせいただけます。</p>
+						  <p>The administrator for this voice bank "Hirako Koma" is also Yumashanko[羽麋]. If you need any help or have questions about this voice bank, you can contact me through the following methods:</p>
 						</div>
 						<footer>
-							<ul class="items">
-								<li>
-									<h3>Email Adress</h3>
-									<a href="https://mail.google.com">yumashanko@gmail.com</a>
-								</li>
-								<li>
-									<h3>Follow me on Bilibili</h3>
-									<a href="https://space.bilibili.com/515205811">羽麋</a>
+						  <ul class="items">
+							<li>
+							  <h3>Email Address</h3>
+							  <a href="https://mail.google.com">yumashanko@gmail.com</a>
+							</li>
+							<li>
+							  <h3>Follow me on Bilibili</h3>
+							  <a href="https://space.bilibili.com/515205811">Yumashanko羽麋</a>
+							</li>
+						  </ul>
+						</footer>
+						
 								</li>
 								<!-- <li>
 									<h3>Elsewhere</h3>
