--- a/chinese.html
+++ b/chinese.html
@@ -17,12 +17,13 @@
 
 				<!-- Intro -->
 					<section class="intro">
-				<a href="english.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Switch to English</a>
-				<a href="chinese.html" style="font-family: Arial, Helvetica, sans-serif; font-weight: bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;切换为中文</a>
+                        <a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日本語</a>
+                        <a href="english.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Switch to English</a>
+
 
 						<header>
 							<h1>平子コマ</h1>
-							<p style="margin-bottom: 40px;">UTAU日本語連続音音源</p>
+							<p style="margin-bottom: 40px;">UTAU日语连续音音源</p>
 							<a href="https://drive.google.com/file/d/1bI7G9XfInCjfJE_KEKZgxZyilshfgnG1/view?usp=share_link" class="button">Voicebank Download</a>
 							<p style="margin-bottom: 100px;">
 
@@ -40,41 +41,41 @@
 				<!-- Section -->
 					<section id="first">
 						<header>
-							<h2 class="bigbold">プロフィール</h2>
+							<h2 class="bigbold" style="font-family: Arial, Helvetica, sans-serif; font-weight: bold;">音源信息</h2>
 						</header>
 						<div class="content">
 							<div class="gallery">
 								<a href="images/hirako_head.PNG" class="landscape"><img src="images/Koma_Q.PNG" alt="" /></a>
 							</div>
 							<p style="margin-bottom: 100px;"></p>
-							<p> 人物紹介:  彼の名前は<strong>平子コマ</strong>で、元気な少年のように見えますが、実際にはどこかぼんやりしています。髪はいつも寝ぐせで乱れており、鼻には通常、絆創膏が貼られています。それは歩きながらうっかりして電柱にぶつかるからです。</p>
-							<p> 基本情報 :</p>
-							<p> &nbsp;&nbsp;&nbsp;性別&nbsp;&nbsp;&nbsp;&nbsp;男</p>
-							<p> &nbsp;&nbsp;&nbsp;身長&nbsp;&nbsp;&nbsp;&nbsp;168 cm</p>
-							<p> &nbsp;&nbsp;&nbsp;年齢&nbsp;&nbsp;&nbsp;&nbsp;15歳</p>
-							<p>	中の人&立ち絵：羽麋<p>
-								<p>	音声特性： 得意な音域はE2-C4で、低い音域の楽曲に適しています。</p>
-								<p>	代表色：#e92d3e</p>
-								<p>	連続音音源形式：VCV</p>
-								<p>	収録音階：A2、F3</p>
-								<p>音源の音素の使用方法：<br/>
-									&nbsp;&nbsp;&nbsp;1. この音源はローマ字表記を使用しています。UTAUエディターで歌詞をローマ字のVCV形式に変換してから入力してください。<br/>
-									&nbsp;&nbsp;&nbsp;2. 呼吸音は1-5の5種類の異なる呼吸音があり、それぞれaeiouの5つの母音に続く呼吸音に対応しています。UTAUエディターでbreath1, breath2, ..., breath5を使用してこれらの呼吸音を呼び出してください。
-									<br/>&nbsp;&nbsp;&nbsp;3. 気泡音を呼び出す場合は、「括弧+母音」または「母音+括弧」（スペースなし）を使用してください。括弧が前にある場合は気泡音が前に、後ろにある場合は気泡音が後ろになります。例えば、")a"は気泡音が前の「あ」を、"a("は気泡音が後の「あ」を意味します。</p>
+							<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;"> 他的名字是<strong>平子コマ</strong>，看起来是元气少年，但实际上呆呆的。头发总是睡得乱七八糟，鼻子上一般都贴着创可贴是因为走路时发呆会撞上电线杆。</p>
+							<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;"> 基本情况</p>
+							<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;"> &nbsp;&nbsp;&nbsp;性别&nbsp;&nbsp;&nbsp;&nbsp;男</p>
+							<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;"> &nbsp;&nbsp;&nbsp;身高&nbsp;&nbsp;&nbsp;&nbsp;168 cm</p>
+							<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;"> &nbsp;&nbsp;&nbsp;年龄&nbsp;&nbsp;&nbsp;&nbsp;15岁</p>
+							<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">	中之人&立绘：羽麋<p>
+								<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">	声音特性：擅长音域为E2-C4、适合演唱底音音区的曲目。</p>
+								<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">	代表色：#e92d3e</p>
+								<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">	连续音音源形式：VCV</p>
+								<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">	收录音阶：A2、F3</p>
+								<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">音源的音素使用方法：<br/>
+									&nbsp;&nbsp;&nbsp;1. 此音源采用罗马音标记，请在UTAU编辑器中将歌词转化为罗马音的VCV格式再进行输入。<br/>
+									&nbsp;&nbsp;&nbsp;2. 呼吸音分为1-5的五种不同呼吸音，分别对应aeiou五种元音后接的呼吸音，请在UTAU编辑器中使用breath1, breath2, ..., breath5来调用这些呼吸音。
+									<br/>&nbsp;&nbsp;&nbsp;3. 调用气泡音请使用“括弧+元音”或者“元音+括弧”（中间无空格），括弧在前表示气泡音在前，在后表示气泡音在后。例如“)a”表示气泡音在前的“あ”，“a(”表示气泡音在后的“あ”。</p>
 						</div>
 					</section>
 
 				<!-- Section -->
 					<section>
 						<header>
-							<h2 class="bigbold">ダウンロード</h2>
+							<h2 class="bigbold"  style="font-family: Arial, Helvetica, sans-serif; font-weight:bold;">声库及素材下载</h2>
 						</header>
 						<div class="content">
-							<p><strong>こちらをクリックして「平子コマ」のVCV連続音音源をダウンロードしてください。</strong></p>
+							<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;"><strong>「平子コマ」VCV连续音音源下载</strong></p>
 							<ul class="actions">
 								<li><a href="https://drive.google.com/file/d/1bI7G9XfInCjfJE_KEKZgxZyilshfgnG1/view?usp=share_link" class="button primary large">voicebank Download</a></li>
 							</ul>
-							<p>以下はこの音源の試聴クリップです。</p>
+							<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">以下为此音源的试听片段</p>
 							<audio controls>
 								<source src="audio/sample.mp3" type="audio/mpeg">
 								Your browser does not support the audio element.
@@ -84,7 +85,7 @@
 								Your browser does not support the audio element.
 							</audio>
 							<p style="margin-bottom: 120px;"></p>
-							<p><strong>こちらをクリックして「平子コマ」のキャラクター立ち絵をダウンロードしてください。</strong></p>
+							<p  style="font-family: Arial, Helvetica, sans-serif; font-weight:500;"><strong>「平子コマ」立绘素材下载</strong></p>
 							<ul class="actions">
 								<li><a href="download/Illustration.zip" class="button large">illustration Download</a></li>
 							</ul>
@@ -94,12 +95,12 @@
 				<!-- Section -->
 					<section>
 						<header>
-							<h2 class="bigbold">使用規約</h2>
+							<h2 class="bigbold"  style="font-family: Arial, Helvetica, sans-serif; font-weight:bold;">使用规约</h2>
 						</header>
 						<div class="content">
-							<p>この音源をダウンロードして使用する前に、使用規約をお読みください。この音源を使用することは、該当の規約に同意したことを意味します。規約に違反する行為は歓迎されませんので、それを行わないでください。</p>
-							<a href="https://utauchn.huijiwiki.com/wiki/%E5%85%AC%E5%85%B1%E8%A7%84%E7%BA%A6">規約を読む</a>
-							<p>この音源の使用規約は「UTAU中華組wiki公共使用規約」です。</p>
+							<p style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">在下载与使用本音源进行创作之前请先阅读使用规约，使用本音源即代表同意该规约，违反规约的事情是不受欢迎的，请不要那么做。</p>
+							<a href="https://utauchn.huijiwiki.com/wiki/%E5%85%AC%E5%85%B1%E8%A7%84%E7%BA%A6"  style="font-family: Arial, Helvetica, sans-serif; font-weight:bold;">阅读规约</a>
+							<p  style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">本音源的使用规约为“UTAU中华组wiki公共使用规约”</p>
 						</div>
 					</section>
 
@@ -374,10 +375,10 @@ print 'Sorted in ' + i + ' iterations.';</code></pre>
 				<!-- Section -->
 					<section>
 						<header>
-							<h2 class="bigbold">作者の連絡先</h2>
+							<h2 class="bigbold"  style="font-family: Arial, Helvetica, sans-serif; font-weight:bold;">作者联系方式</h2>
 						</header>
 						<div class="content">
-							<p>この音源「平子コマ」の管理者も羽麋[Yumashanko]です。何か助けが必要な場合やこの音源についての疑問があれば、以下の方法でお問い合わせいただけます。</p>
+							<p  style="font-family: Arial, Helvetica, sans-serif; font-weight:500;">本音源的管理人也是羽麋（yumashanko），如有需要帮助或对本音源有任何疑问，可以通过这些方式联系。</p>
 						</div>
 						<footer>
 							<ul class="items">
