--- a/english.html
+++ b/english.html
@@ -17,7 +17,8 @@
 
 				<!-- Intro -->
 					<section class="intro">
-				<a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日本語</a>
+						<a href="chinese.html" style="font-family: Arial, Helvetica, sans-serif; font-weight: bold;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;切换为中文</a>
+						<a href="index.html">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;日本語</a>
 
 						<header>
 							<h1>平子コマ</h1>
