--- a/english.html
+++ b/english.html
@@ -57,7 +57,16 @@
 							<p>  Vocal Characteristics: His proficient vocal range is E2-C4, making him well-suited for songs with lower ranges.</p>
 							<p>  Representative Color: #e92d3e</p>
 							<p>  Voice Bank Type: VCV</p>
-							<p>  Recorded Pitches: A2, F3</p>							
+							<p>  Recorded Pitches: A2, F3</p>
+							<p>
+								Method of Using the Voicebank:
+								<br/>
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This voicebank utilizes Romanized notations. Please convert the lyrics into Romanized VCV format in the UTAU editor before inputting.
+								<br/>
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Breathing sounds are available in five different types, numbered 1-5, corresponding to the five vowels A E I O U, followed by breathing sounds. In the UTAU editor, use "breath1, breath2, ..., breath5" to call these breathing sounds.
+								<br/>
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;To trigger bubble sounds, use "parenthesis + vowel" or "vowel + parenthesis" (no spaces in between). A parenthesis before indicates the bubble sound comes before, and after indicates the bubble sound comes after. For example, ")a" represents an "ah" sound with a preceding bubble sound, while "a(" represents an "ah" sound with a bubble sound following it.
+							</p>							
 						</div>
 					</section>
 
