--- a/english.html
+++ b/english.html
@@ -48,7 +48,7 @@
 								<a href="images/hirako_head.PNG" class="landscape"><img src="images/Koma_Q.PNG" alt="" /></a>
 							</div>
 							<p style="margin-bottom: 100px;"></p>
-							<p>Character Introduction: His name is <strong>Hirako Koma</strong>. Though he appears to be an energetic young boy, he is actually somewhat absent-minded. His hair is always messy due to bed head, and there is usually a band-aid on his nose. This is because he tends to accidentally bump into utility poles while walking.</p>
+							<p>Character Introduction: His name is <strong>Hirako Koma</strong>. Though he appears to be an energetic young boy, he is actually somewhat absent-minded. His hair is always messy due to bed head, and there is usually a band-aid on his nose -- he always accidentally bump into trees while walking.</p>
 							<p>Basic Information:</p>
 							<p>  &nbsp;&nbsp;&nbsp;Gender&nbsp;&nbsp;&nbsp;&nbsp;Male</p>
 							<p>  &nbsp;&nbsp;&nbsp;Height&nbsp;&nbsp;&nbsp;&nbsp;168 cm</p>
