--- a/english.html
+++ b/english.html
@@ -65,7 +65,7 @@
 								<br/>
 								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Breathing sounds are available in five different types, numbered 1-5, corresponding to the five vowels A E I O U, followed by breathing sounds. In the UTAU editor, use "breath1, breath2, ..., breath5" to call these breathing sounds.
 								<br/>
-								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;To trigger bubble sounds, use "parenthesis + vowel" or "vowel + parenthesis" (no spaces in between). A parenthesis before indicates the bubble sound comes before, and after indicates the bubble sound comes after. For example, ")a" represents an "ah" sound with a preceding bubble sound, while "a(" represents an "ah" sound with a bubble sound following it.
+								&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;To trigger vocal fry, use "parenthesis + vowel" or "vowel + parenthesis" (no spaces in between). A parenthesis before a vowel indicates the vocal fry effect comes before, and after indicates the sound comes after. For example, ")a" represents an "ah" sound with a preceding vocal fry, while "a(" represents an "ah" sound with a vocal fry following it.
 							</p>							
 						</div>
 					</section>
